--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Blinker:wght@600;700&family=Dosis:wght@500&family=Libre+Baskerville:wght@400;700&family=Nunito+Sans:opsz,wght@6..12,600&family=PT+Sans+Narrow:wght@700&family=Pacifico&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Whisper&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Blinker:wght@600;700&family=Calligraffitti&family=Dosis:wght@500&family=Libre+Baskerville:wght@400;700&family=Nunito+Sans:opsz,wght@6..12,600&family=PT+Sans+Narrow:wght@700&family=Pacifico&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Whisper&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -40,8 +41,21 @@ body {
   left: 0;
   right: 0;
   position: absolute;
-  margin-top: 70px;
+  margin-top: 20px;
   border-radius: 50%;
-  border: 2px solid rgba(27, 0, 177, 0.823);
   border: 6px solid #ff00ff;
+}
+
+.div1 {
+  background: #fff;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  width: 90%;
+  margin: auto;
+  height: auto;
+  padding: 20px;
+  border: 4px solid rgb(139, 51, 51);
+  border-radius: 10px;
 }/*# sourceMappingURL=main.css.map */
